<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".activities.MainActivity">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.design.widget.TextInputLayout
            android:layout_margin="10dp"
            android:id="@+id/tilSearch"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="Address">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/tietSearch"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:maxLines="1"
                android:imeOptions="actionGo"
                android:nextFocusDown="@+id/ibSearch" />

        </android.support.design.widget.TextInputLayout>

        <ImageButton
            android:layout_gravity="center_vertical"
            android:id="@+id/ibSearch"
            android:padding="5dp"
            android:src="@android:drawable/ic_menu_search"
            android:layout_width="100dp"
            android:layout_height="50dp" />

    </LinearLayout>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/rvAddresses"
        android:fadeScrollbars="true"
        android:scrollbars="vertical"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        app:cardElevation="6dp"
        app:cardCornerRadius="2dp"
        android:foreground="?attr/selectableItemBackground"
        />

    <ProgressBar
        android:visibility="gone"
        android:id="@+id/pbLoading"
        android:layout_gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <TextView
        android:visibility="gone"
        android:text="@string/no_resullts"
        android:id="@+id/tvNoResults"
        android:layout_gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

</LinearLayout>
